# 3p-logger-next

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  CMakeLists.txt  README.md  esp32_partition_4M.csv  get-version-info.py  platformio.ini  pre_reboot_usb_boot.py  sdkconfig.defaults  sdkconfig.lolin_s2_mini  sdkconfig.lolin_s2_mini.old
components/: CMakeLists.txt
doc/: configuration.ini  lolin_s2_mini.md  telemetry-protocol-map.md
doc/dev/: accel-module-integration.txt  configuration_plan.txt  io-parsers.txt  logger_module.txt
include/: build_info.h  log.h  target.h  version.h
lib/hal-esp32/: adc.c  gpio.c  i2c.c  init.c  md5.c  mutex.c  pwm.c  rand.c  sdcard.c  spi.c  storage.c  ws2812.c
lib/stm-lis3dh/: lis3dh_reg.c  lis3dh_reg.h
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  style-guide.md  systemPatterns.md  techContext.md
src/: CMakeLists.txt  app_commands.h  app_errors.h  app_logic.c  app_logic.h  app_state.c  app_state.h  config_manager.c  config_manager.h  main.c
src/gps/: gps.c  gps.h  gps_buff.c  gps_buff.h
src/io/: gpio.c  gpio.h  hal_spi.h  io.c  io.h  io_manager.c  io_manager.h  serial.c  serial.h
src/modules/: accel_module.c  accel_module.h  led_module.c  led_module.h  logger_module.c  logger_module.h  pz_module.c  pz_module.h
src/platform/: system.c  system.h
src/protocols/: alt_fuser.c  alt_fuser.h  crsf.c  crsf.h  mavlink.c  mavlink.h  msp.c  msp.h  msp_v2.c  msp_v2.h  nmea.c  nmea.h  protocol.h  protocol_parser.h  ublox.c  ublox.h
src/util/: list.c  list.h  macros.h  observer.c  (+2 more)
(+16 files in other folders)
