# Реєструємо компонент з назвою 'mavlink'
idf_component_register(
    # Вказуємо, що вихідні файли є лише в цій папці
    SRCS "."
    # Вказуємо, де шукати заголовкові файли (*.h)
    INCLUDE_DIRS "."
    # Робимо так, щоб інші компоненти (наш 'src') бачили заголовкові файли MAVLink
    PRIV_INCLUDE_DIRS "."
)